<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:paddingBottom="60dp"
    android:paddingTop="20dp"
    android:descendantFocusability="blocksDescendants"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoCorona"
        android:src="@drawable/corona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_home"
        android:layout_below="@id/logoCorona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/judul_home"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_home"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnExportCSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/btnExport"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/tambahRefresh"
            android:layout_weight="100"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnTambahPasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightblue"
                android:text="@string/btnTambah"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_secondary"
                android:text="@string/btnRefresh"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/belumAdaData"
        android:layout_below="@id/buttons"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/listPasien"
        android:layout_below="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:scrollbars="vertical"
        android:paddingTop="10dp"/>

</RelativeLayout>